--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "next dev",
+    "dev:clean": "rm -rf .next && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -24,7 +25,7 @@
   "dependencies": {
     "@google/model-viewer": "^4.1.0",
     "@supabase/supabase-js": "^2.93.1",
-    "next": "^14.0.0",
+    "next": "14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "xlsx": "^0.18.5"
